# cpp-neural-network

./: CMakeLists.txt  main.cpp
Algorithm/: ActivationFunctions.cpp  ActivationFunctions.h  BackPropagator.cpp  BackPropagator.h
Connection/: Connection.cpp  Connection.h
Global/: Declarations.h  Global.cpp  Global.h  Types.h  ddouble.cpp  ddouble.h
Layer/: GenericLayer.cpp  GenericLayer.h  HiddenLayer.cpp  HiddenLayer.h  InputLayer.cpp  InputLayer.h  OutputLayer.cpp  OutputLayer.h
Network/: Network.cpp  Network.h
Neuron/: GenericNeuron.cpp  GenericNeuron.h  HiddenLayerNeuron.cpp  HiddenLayerNeuron.h  InnerLayerNeuron.cpp  InnerLayerNeuron.h  InputLayerNeuron.cpp  InputLayerNeuron.h  OutputLayerNeuron.cpp  OutputLayerNeuron.h
